--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -5,9 +5,14 @@
         <link rel="stylesheet" href="styles/3-common.css">
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="icon" href="images/logo.png">
     </head>
     <body>
         <header>
+            
+        <div class="logo">
+
+        </div>
         </header>
         <footer>
             Best School
